# Assignment2

./: .env  .gitignore  README  README.md  docker-compose.yml  project_tree_structure
airflow/: .env  .gitignore  Dockerfile  airflow-scheduler.err  airflow-scheduler.out  airflow.cfg  pyproject.toml
airflow/dags/: huggingface_pdf_airflow_dag.py  pipeline.py
airflow/dags/modules/: pipeline.py  view.py
backend/: Dockerfile  fastapi_code.py  main.py  openai_client.py  pyproject.toml
frontend/: Dockerfile  pyproject.toml  streamlit_test.py
templates/: login.html  main.html  pdf_content.html  pdf_selection.html  register.html
